--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "com.honliv.honlivhospital"
-        minSdkVersion 15
+        minSdkVersion 14
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
@@ -32,4 +32,7 @@ dependencies {
 // 如果想使用SwipeBack 滑动边缘退出Fragment/Activity功能，请再添加下面的库
     compile 'me.yokeyword:fragmentation-swipeback:0.7.9'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+    //下拉刷新
+    compile 'com.baoyz.pullrefreshlayout:library:1.2.0'
+    compile 'com.romandanylyk:pageindicatorview:0.0.5'
 }
