--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,8 @@ repositories {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.4.0'
+    compile 'com.android.support:appcompat-v7:23.3.0'
+    compile 'com.android.support:design:23.3.0'
     compile 'com.loopj.android:android-async-http:1.4.9'
     compile 'me.yokeyword:fragmentation:0.7.13'
 // 如果想使用SwipeBack 滑动边缘退出Fragment/Activity功能，请再添加下面的库
@@ -35,4 +36,6 @@ dependencies {
     //下拉刷新
     compile 'com.baoyz.pullrefreshlayout:library:1.2.0'
     compile 'com.romandanylyk:pageindicatorview:0.0.5'
+    compile 'com.android.support:cardview-v7:23.3.0'
+    compile 'com.android.support:recyclerview-v7:23.3.0'
 }
