--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,22 +21,26 @@ android {
 
 repositories {
     mavenCentral()
+    maven {
+        url "https://jitpack.io"
+    }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.github.ihsanbal:SlidingIntoView:1.0.0'
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.3.0'
     compile 'com.android.support:design:23.3.0'
     compile 'com.loopj.android:android-async-http:1.4.9'
     compile 'me.yokeyword:fragmentation:0.7.13'
-// 如果想使用SwipeBack 滑动边缘退出Fragment/Activity功能，请再添加下面的库
+    // 如果想使用SwipeBack 滑动边缘退出Fragment/Activity功能，请再添加下面的库
     compile 'me.yokeyword:fragmentation-swipeback:0.7.9'
-    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
     //下拉刷新
     compile 'com.baoyz.pullrefreshlayout:library:1.2.0'
     compile 'com.romandanylyk:pageindicatorview:0.0.5'
     compile 'com.android.support:cardview-v7:23.3.0'
     compile 'com.android.support:recyclerview-v7:23.3.0'
     compile 'com.google.code.gson:gson:2.8.0'
+    compile 'com.facebook.fresco:fresco:0.14.1'
 }
