--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,7 @@ android {
         versionCode 1
         versionName "1.0"
     }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -29,7 +30,7 @@ android {
 }
 
 repositories {
-//    mavenCentral()
+    mavenCentral()
     maven {
         url "https://jitpack.io"
     }
