--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,9 +24,9 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-    android {
-        useLibrary 'org.apache.http.legacy'
-    }
+//    android {
+//        useLibrary 'org.apache.http.legacy'
+//    }
 }
 
 repositories {
