--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,11 +74,17 @@ dependencies {
     compile 'com.loopj.android:android-async-http:1.4.9'
     compile 'com.google.code.gson:gson:2.8.0'
     compile 'com.loopj.android:android-async-http:1.4.9'
-//    compile 'com.github.navasmdc:MaterialDesign:1.5@aar'
     compile 'com.github.vajro:MaterialDesignLibrary:1.6'
-    compile 'org.apache.httpcomponents:httpcore:4.4.1'
-    compile 'org.apache.httpcomponents:httpclient:4.5'
     // Glide
     compile "com.github.bumptech.glide:glide:$rootProject.glideVersion"
     compile "com.github.bumptech.glide:okhttp-integration:$rootProject.glideokhttpVersion"
+
+    //    compile 'org.apache.httpcomponents:httpcore:4.4.1'
+//    compile 'org.apache.httpcomponents:httpclient:4.5'
+//    compile 'org.apache.httpcomponents:httpclient:4.5'
+//    compile 'org.apache.httpcomponents:httpmime:4.3.3'
+//    compile 'org.apache.httpcomponents:httpcore:4.3.2'
+//    compile files('libs/httpclient-4.2.1.jar')
+//    compile group: 'org.apache.httpcomponents' , name: 'httpclient-android' , version: '4.3.5.1'
+
 }
