--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,6 +78,7 @@ dependencies {
     // Glide
     compile "com.github.bumptech.glide:glide:$rootProject.glideVersion"
     compile "com.github.bumptech.glide:okhttp-integration:$rootProject.glideokhttpVersion"
+    compile 'com.github.delight-im:Android-AdvancedWebView:v3.0.0'
 
     //    compile 'org.apache.httpcomponents:httpcore:4.4.1'
 //    compile 'org.apache.httpcomponents:httpclient:4.5'
