--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'me.tatarka.retrolambda'
 apply plugin: 'com.neenbedankt.android-apt'
 
 android {
-    compileSdkVersion 23
+    compileSdkVersion rootProject.ext.compileSdkVersion
     buildToolsVersion rootProject.ext.buildToolsVersion
 
     defaultConfig {
@@ -39,17 +39,12 @@ repositories {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.3.0'
-    compile 'com.android.support:design:23.3.0'
-    compile 'com.loopj.android:android-async-http:1.4.9'
     compile 'me.yokeyword:fragmentation:0.7.13'
     // 如果想使用SwipeBack 滑动边缘退出Fragment/Activity功能，请再添加下面的库
     compile 'me.yokeyword:fragmentation-swipeback:0.7.9'
     //下拉刷新
     compile 'com.baoyz.pullrefreshlayout:library:1.2.0'
     compile 'com.romandanylyk:pageindicatorview:0.0.5'
-    compile 'com.android.support:cardview-v7:23.3.0'
-    compile 'com.android.support:recyclerview-v7:23.3.0'
     compile 'com.google.code.gson:gson:2.8.0'
     compile 'com.facebook.fresco:fresco:0.14.1'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
@@ -60,8 +55,6 @@ dependencies {
     compile 'com.squareup.okhttp3:logging-interceptor:3.4.2'
     compile 'com.jakewharton:butterknife:8.0.1'
     apt 'com.jakewharton:butterknife-compiler:8.0.1'
-    compile files('libs/xUtils-2.5.2.jar')
-    compile files('libs/universal-image-loader-1.9.1.jar')
     compile files('libs/alibaba.jar')
     compile files('libs/alipaySdk-20161009.jar')
     compile files('libs/android_api_3_4.jar')
@@ -70,22 +63,21 @@ dependencies {
     compile files('libs/core.jar')
     compile files('libs/libammsdk.jar')
     compile files('libs/pushservice-3.2.0.jar')
-    compile 'com.google.code.gson:gson:2.8.0'
-    compile 'com.loopj.android:android-async-http:1.4.9'
-    compile 'com.google.code.gson:gson:2.8.0'
-    compile 'com.loopj.android:android-async-http:1.4.9'
     compile 'com.github.vajro:MaterialDesignLibrary:1.6'
     // Glide
     compile "com.github.bumptech.glide:glide:$rootProject.glideVersion"
+
     compile "com.github.bumptech.glide:okhttp-integration:$rootProject.glideokhttpVersion"
     compile 'com.github.delight-im:Android-AdvancedWebView:v3.0.0'
-
     //    compile 'org.apache.httpcomponents:httpcore:4.4.1'
-//    compile 'org.apache.httpcomponents:httpclient:4.5'
-//    compile 'org.apache.httpcomponents:httpclient:4.5'
-//    compile 'org.apache.httpcomponents:httpmime:4.3.3'
-//    compile 'org.apache.httpcomponents:httpcore:4.3.2'
-//    compile files('libs/httpclient-4.2.1.jar')
-//    compile group: 'org.apache.httpcomponents' , name: 'httpclient-android' , version: '4.3.5.1'
-
+    //    compile 'org.apache.httpcomponents:httpclient:4.5'
+    //    compile 'org.apache.httpcomponents:httpclient:4.5'
+    //    compile 'org.apache.httpcomponents:httpmime:4.3.3'
+    //    compile 'org.apache.httpcomponents:httpcore:4.3.2'
+    //    compile files('libs/httpclient-4.2.1.jar')
+    //    compile group: 'org.apache.httpcomponents' , name: 'httpclient-android' , version: '4.3.5.1'
+    compile 'com.android.support:appcompat-v7:25.0.1'
+    compile 'com.android.support:design:25.0.1'
+    compile 'com.android.support:recyclerview-v7:25.0.1'
+    compile 'com.android.support:cardview-v7:25.0.1'
 }
